# work

./: .env.example  README.md  app.js  appapitelegramauthroute.js  appapitelegramsendroute.js  appglobals.css  applayout.jsx  apppage.jsx  db.js  dev-server.js  index.html  libgame.js  libpromo.js  libtelegramAuth.js  package.json  script.js  server.js  styles.css  telegram.js
.github/workflows/: build-neuro-recorder.yml
api/: notify.js  send.js  telegram-webhook.js
app/: globals.css  layout.jsx  page.jsx
app/api/telegram/auth/: route.js
app/api/telegram/send/: route.js
lib/: game.js  promo.js  telegramAuth.js
neuro-recorder/: .stage2-trigger  .stage3-trigger  README-stage2.md  STAGE.md  settings.gradle.kts
neuro-recorder-build/chunks/: 00
neuro-recorder/app/: build.gradle.kts  proguard-rules.pro
neuro-recorder/app/src/main/: AndroidManifest.xml
neuro-recorder/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
neuro-recorder/app/src/main/java/com/forgptstas/neurorecorder/: AssetUtils.java  AudioDecoder.java  DiarizationEngine.java  DiarizationModelManager.java  DiarizationSegment.java  DiarizationStore.java  DiarizedTranscript.java  MainActivity.java  ModelStatusActivity.java  RecorderService.java  RecordingDetailsActivity.java  RecordingItem.java  (+11 more)
neuro-recorder/app/src/main/res/layout/: activity_main.xml
neuro-recorder/app/src/main/res/values/: strings.xml  styles.xml
neuro-recorder/app/src/main/res/xml/: file_paths.xml
neuro-recorder/docs/: architecture.md  model-strategy.md  roadmap.md
public/: app.js  index.html  styles.css
(+29 files in other folders)
